# elser

./: Cargo.toml
src/: cli.rs  logger.rs  main.rs  settings.rs
src/elastic/: client.rs  elser.rs  mod.rs
