[package]
name = "elser"
version = "0.1.0"
authors = ["Алексей Осадчук <aleksey.osadchuk@playrix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
dirs = "3.0.1"
serde_derive = "^1.0.8"
serde = "^1.0.8"
exitcode = "1.1.2"
log = "*"
chrono = "*"

[dependencies.config]
version = "0.10.1"
default-features = false
features = ["yaml"]
